fix spacing on mat-dialog buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,7 @@ a { text-decoration: none; }
   margin: 0 auto;
   padding: 30px 0px 80px 0px;
 }
+
+.mat-dialog-actions {
+  margin-bottom: 0!important;
+}
